objects/Asset.object
<CustomObject>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>300</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BaseQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Base Quote Line</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this asset.</description>
        <formula>Product2.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CurrentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that currently covers this asset. This field is only populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</description>
        <inlineHelpText>Subscription that currently covers this asset. Automatically populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</inlineHelpText>
        <label>Current Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>CoveredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <description>Name of the Price Dimension that originated this Asset</description>
        <formula>SBQQ__QuoteLine__r.SBQQ__Dimension__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Price Dimension that originated this Asset</inlineHelpText>
        <label>Price Dimension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__LatestQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets (Latest Quote Line)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this asset.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ReferenceContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredById__c</fullName>
        <label>Required By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset that represents package that requires this asset.</description>
        <inlineHelpText>Asset that represents package that requires this asset.</inlineHelpText>
        <label>Required By</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Required Assets</relationshipLabel>
        <relationshipName>RequiredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Revised Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>